# XDE-ISIR

./: .gitmodules  CMakeLists.txt  README.md  setup.py
cmake/: macros.cmake
