cmake_minimum_required(VERSION 2.8)
INCLUDE(cmake/macros.cmake)

FIND_PYTHON()

IF(NOT INSTALL_MODE)
	SET(INSTALL_MODE "install")
ENDIF(NOT INSTALL_MODE)

MESSAGE("
*********
Python modules will be installed in ${CMAKE_INSTALL_PREFIX}")
MESSAGE("Python modules install mode choosen: ${INSTALL_MODE}
*********
")

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(PC_ORCISIR_ISIRCONTROLLER orcisir_ISIRController)


INSTALL_PYTHON_MODULE(XDE-WorldManager ${INSTALL_MODE} ${CMAKE_INSTALL_PREFIX})
INSTALL_PYTHON_MODULE(XDE-RobotLoader ${INSTALL_MODE} ${CMAKE_INSTALL_PREFIX})
INSTALL_PYTHON_MODULE(XDE-Resources ${INSTALL_MODE} ${CMAKE_INSTALL_PREFIX})
INSTALL_PYTHON_MODULE(XDE-Spacemouse ${INSTALL_MODE} ${CMAKE_INSTALL_PREFIX})

IF(NOT PC_ORCISIR_ISIRCONTROLLER_FOUND)
    MESSAGE("-- orcisir_ISIRController not found, will not install SwigISIRController and ISIRController")
ELSE(NOT PC_ORCISIR_ISIRCONTROLLER_FOUND)
    MESSAGE("-- orcisir_ISIRController found")
    INSTALL_PYTHON_MODULE(XDE-SwigISIRController "install" ${CMAKE_INSTALL_PREFIX})
    INSTALL_PYTHON_MODULE(XDE-ISIRController ${INSTALL_MODE} ${CMAKE_INSTALL_PREFIX})
ENDIF(NOT PC_ORCISIR_ISIRCONTROLLER_FOUND)

